ahmed2_dicoding.ipynb

--- a/ahmed2_dicoding.ipynb
+++ b/ahmed2_dicoding.ipynb
@@ -41,7 +41,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Nama: Sardi Irfansyah\n",
+        "Nama: Ahmad\n",
         "\n",
         "Proyek: Membuat klasifikasi gambar batu, gunting , kentas dengan Alogoritma CNN menggunakan Tensorflow.\n",
         "\n",
