ahmed_dicoding.ipynb

--- a/ahmed_dicoding.ipynb
+++ b/ahmed_dicoding.ipynb
@@ -31,7 +31,7 @@
         "id": "TFb2yPf1SV7g"
       },
       "source": [
-        "Nama : Sardi Irfansyah\n",
+        "Nama : Ahmad\n",
         "\n",
         "**submission Dicoding**"
       ]
